--- a/VenteApp/VenteApp.csproj
+++ b/VenteApp/VenteApp.csproj
@@ -13,6 +13,8 @@
 		either BOTH runtimes must be indicated or ONLY macatalyst-x64. -->
 		<!-- For example: <RuntimeIdentifiers>maccatalyst-x64;maccatalyst-arm64</RuntimeIdentifiers> -->
 
+		<AndroidPackageFormat>apk</AndroidPackageFormat>
+
 		<OutputType>Exe</OutputType>
 		<RootNamespace>VenteApp</RootNamespace>
 		<UseMaui>true</UseMaui>
@@ -56,7 +58,6 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microcharts.Maui" Version="1.0.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.0" />
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
